--- a/SALTED-tutorial/salted-notebook.ipynb
+++ b/SALTED-tutorial/salted-notebook.ipynb
@@ -2633,7 +2633,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:salted_tut] *",
+   "display_name": "Python [conda env:salted_tut]",
    "language": "python",
    "name": "conda-env-salted_tut-py"
   },
