add salted dataset

--- a/SALTED-tutorial/salted-notebook.ipynb
+++ b/SALTED-tutorial/salted-notebook.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "02f243b7",
    "metadata": {
     "editable": true,
@@ -123,7 +123,7 @@
    "source": [
     "\"\"\" Change directory, assume everyone starts jupyter from dir `solution-notebook` \"\"\"\n",
     "\n",
-    "RUN_DIR = os.path.abspath(\"../tutorial-run\")  # PLEASE change this if error occurs\n",
+    "RUN_DIR = os.path.abspath(\"./tutorial-run\")  # PLEASE change this if error occurs\n",
     "assert os.path.exists(RUN_DIR), f\"Run directory does not exist. Currently at {os.getcwd()}.\"\n",
     "os.chdir(RUN_DIR)\n",
     "print(\"Changed working directory to:\", RUN_DIR)"
