add .gitignore, update salted notebook

--- a/SALTED-tutorial/salted-notebook.ipynb
+++ b/SALTED-tutorial/salted-notebook.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "0c950515-3848-4641-95e5-c5b2ec1775ac",
    "metadata": {
     "editable": true,
@@ -56,6 +56,8 @@
     "import numpy as np\n",
     "import py3Dmol\n",
     "import salted\n",
+    "from ase.visualize import view as ase_view\n",
+    "from ase.io import read\n",
     "from ipywidgets import IntSlider, interact\n",
     "from scipy import sparse\n",
     "from scipy.stats import pearsonr\n",
@@ -181,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "939a5897-4c7d-4408-9a67-e5682fcabb15",
    "metadata": {
     "editable": true,
@@ -274,8 +276,8 @@
    "source": [
     "\"\"\" Visualization of training structures using py3Dmol \"\"\"\n",
     "\n",
-    "# Initialize a Py3Dmol view\n",
-    "view = py3Dmol.view()\n",
+    "# # Initialize a Py3Dmol view\n",
+    "# view = py3Dmol.view()\n",
     "# Path to .xyz file used for training\n",
     "file_path = './water_monomers_100.xyz'\n",
     "# Read all frames\n",
@@ -285,6 +287,19 @@
     "interact(lambda index: visualize_snapshot(snapshots, index), index=slider)\n",
     "\n",
     "# WARN: ZL: slide bar is missing in my jupyter lab environment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e85892ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\" if interactive widget doesn't work, please run this cell \"\"\"\n",
+    "\n",
+    "file_path = './water_monomers_100.xyz'\n",
+    "ase_view(read(file_path, 0), viewer='x3d')"
    ]
   },
   {
@@ -2246,6 +2261,19 @@
     "\n",
     "slider = IntSlider(min=0, max=len(snapshots)-1, step=1, value=0, description='Snapshot Index', continuous_update=False)\n",
     "interact(lambda index: visualize_snapshot(snapshots, index), index=slider);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b74b667",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\" if interactive widget doesn't work, please run this cell \"\"\"\n",
+    "\n",
+    "file_path = './water_dimers_10.xyz'\n",
+    "ase_view(read(file_path, 0), viewer='x3d')"
    ]
   },
   {
