--- a/SALTED-tutorial/salted-notebook.ipynb
+++ b/SALTED-tutorial/salted-notebook.ipynb
@@ -221,16 +221,10 @@
    "source": [
     "\"\"\" Visualize the test dataset structures using ase, use scrollbar to zoom in and out \"\"\"\n",
     "\n",
-    "# # Path to .xyz file used for training\n",
-    "# file_path = './water_monomers_100.xyz'\n",
-    "# # Read all frames\n",
-    "# # snapshots = read_xyz_snapshots_continuous(file_path)\n",
-    "# slider = IntSlider(min=0, max=len(snapshots)-1, step=1, value=0, description='Snapshot Index', continuous_update=False)\n",
-    "# interact(lambda index: visualize_snapshot(snapshots, index), index=slider)\n",
-    "\n",
     "file_path = './water_monomers_100.xyz'\n",
-    "slider = IntSlider(min=0, max=len(read(file_path, \":\")), step=1, value=0, description='Snapshot Index', continuous_update=False)\n",
-    "interact(lambda index: ase_view(read(file_path, index), viewer='x3d'), index=slider)"
+    "snapshots = read_xyz_snapshots_continuous(file_path)\n",
+    "slider = IntSlider(min=0, max=len(snapshots)-1, step=1, value=0, description='Snapshot Index', continuous_update=False)\n",
+    "interact(lambda index: visualize_snapshot(snapshots, index), index=slider)"
    ]
   },
   {
@@ -243,7 +237,8 @@
     "\"\"\" if interactive widget doesn't work, please run this cell \"\"\"\n",
     "\n",
     "file_path = './water_monomers_100.xyz'\n",
-    "ase_view(read(file_path, 0), viewer='x3d')"
+    "slider = IntSlider(min=0, max=len(read(file_path, \":\")), step=1, value=0, description='Snapshot Index', continuous_update=False)\n",
+    "interact(lambda index: ase_view(read(file_path, index), viewer='x3d'), index=slider)"
    ]
   },
   {
@@ -2154,12 +2149,20 @@
    "source": [
     "\"\"\" Visualize the test dataset structures using ase, use scrollbar to zoom in and out \"\"\"\n",
     "\n",
-    "# view = py3Dmol.view()\n",
-    "# file_path = './water_dimers_10.xyz'\n",
-    "# snapshots = read_xyz_snapshots_continuous(file_path)\n",
-    "\n",
-    "# slider = IntSlider(min=0, max=len(snapshots)-1, step=1, value=0, description='Snapshot Index', continuous_update=False)\n",
-    "# interact(lambda index: visualize_snapshot(snapshots, index), index=slider);\n",
+    "file_path = './water_dimers_10.xyz'\n",
+    "snapshots = read_xyz_snapshots_continuous(file_path)\n",
+    "slider = IntSlider(min=0, max=len(snapshots)-1, step=1, value=0, description='Snapshot Index', continuous_update=False)\n",
+    "interact(lambda index: visualize_snapshot(snapshots, index), index=slider);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "628a8a3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\" if the above visualization doesn't work, please run this cell \"\"\"\n",
     "\n",
     "file_path = './water_dimers_10.xyz'\n",
     "slider = IntSlider(min=0, max=len(read(file_path, \":\")), step=1, value=0, description='Snapshot Index', continuous_update=False)\n",
