--- a/SALTED-tutorial/salted-notebook.ipynb
+++ b/SALTED-tutorial/salted-notebook.ipynb
@@ -308,7 +308,7 @@
     "c_{Im} &= \\sum_{Jn} (S^{-1})_{ImJn} \\left\\langle Q_{Jn} \\middle| \\rho \\right\\rangle\n",
     "\\end{aligned}\n",
     "$$\n",
-    "The RI coefficients $c_{Im}$ serve as the learning targets for SALTED. Since auxiliary basis sets are typically 3-10 times smaller than the full density matrix representation, this dramatically reduces computational complexity.\n"
+    "The RI coefficients $c_{Im}$ serve as the learning targets for SALTED. Since auxiliary basis sets are typically only 3-10 times larger than the full density matrix representation, this dramatically reduces computational complexity and memory requirements ($N_\\mathrm{NAO}^2 \\gg 10 \\times N_\\mathrm{NAO} \\sim N_\\mathrm{RI}$).\n"
    ]
   },
   {
