--- a/SALTED-tutorial/salted-notebook.ipynb
+++ b/SALTED-tutorial/salted-notebook.ipynb
@@ -1110,6 +1110,10 @@
     "$$\n",
     "\\Psi_{ND} = K_{NM} V_{MD} \\Lambda_{DD}^{-1/2}\n",
     "$$\n",
+    "and the original kernel matrix $K_{NN}$ can be approximated as:\n",
+    "$$\n",
+    "K_{NN} \\approx \\Psi_{ND} \\Psi_{ND}^T\n",
+    "$$\n",
     "\n",
     "The SALTED prediction then becomes:\n",
     "$$\n",
