--- a/Basics-GPRandNN-Tutorials/nn-notebook/nn-from-scratch-deeper.ipynb
+++ b/Basics-GPRandNN-Tutorials/nn-notebook/nn-from-scratch-deeper.ipynb
@@ -535,19 +535,19 @@
    "id": "d9fb4a70",
    "metadata": {},
    "source": [
-    "## Learning rate and architechture comparison"
+    "## Neural Network Behavior"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "dd80857d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8eda75da45f946a79426f0f2d8390dc4",
+       "model_id": "29de463006f8434fb467148d9293c883",
        "version_major": 2,
        "version_minor": 0
       },
@@ -563,7 +563,7 @@
     "num_layers_slider = widgets.IntSlider(value=2, min=1, max=5, step=1, description='Layers:')\n",
     "num_neurons_slider = widgets.IntSlider(value=50, min=1, max=300, step=10, description='Neurons:')\n",
     "learning_rate_slider = widgets.FloatLogSlider(value=0.001, base=10, min=-4, max=0, step=0.1, description='LR:')\n",
-    "epochs_slider = widgets.IntSlider(value=50000, min=1000, max=200000, step=1000, description='Epochs:')\n",
+    "epochs_slider = widgets.IntSlider(value=50000, min=1000, max=1000000, step=1000, description='Epochs:')\n",
     "clear_all_button = widgets.Button(description=\"Clear All History\", button_style='danger')\n",
     "\n",
     "\n",
@@ -682,6 +682,96 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eeb5f1b0",
+   "metadata": {},
+   "source": [
+    "### 1. **Underfitting**\n",
+    "- **Suggested setup range:**  \n",
+    "  - Layers: `1`  \n",
+    "  - Neurons: `1–5`  \n",
+    "  - Learning Rate: `0.001 – 0.01`  \n",
+    "  - Epochs: `50000–100000`\n",
+    "- **What to look for:**  \n",
+    "  Loss decreases slowly or stalls, and the predictions remain overly simple — the model fails to capture complexity.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 2. **Overfitting**\n",
+    "- **Suggested setup range:**  \n",
+    "  - Layers: `3–5`  \n",
+    "  - Neurons: `150–300`  \n",
+    "  - Learning Rate: `0.001`  \n",
+    "  - Epochs: `150000–200000`\n",
+    "- **What to look for:**  \n",
+    "  Predictions may fit training points too closely but behave erratically between them or outside the range.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 3. **Too low learning rate**\n",
+    "- **Suggested setup range:**  \n",
+    "  - Layers: `2–3`  \n",
+    "  - Neurons: `50–100`  \n",
+    "  - Learning Rate: `0.00001 – 0.0001`  \n",
+    "  - Epochs: `100000–200000`\n",
+    "- **What to look for:**  \n",
+    "  Loss drops very slowly or flattens out early, indicating ineffective learning progress.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 4. **Too high learning rate**\n",
+    "- **Suggested setup range:**  \n",
+    "  - Layers: `2–3`  \n",
+    "  - Neurons: `30–100`  \n",
+    "  - Learning Rate: `0.1 – 1.0`  \n",
+    "  - Epochs: `100000–200000`\n",
+    "- **What to look for:**  \n",
+    "  Training loss is unstable or even increases. Predictions jump around due to overly large updates.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 5. **Just right**\n",
+    "- **Suggested setup range:**  \n",
+    "  - Layers: `2–3`  \n",
+    "  - Neurons: `50–150`  \n",
+    "  - Learning Rate: `0.001`  \n",
+    "  - Epochs: `100000–150000`\n",
+    "- **What to look for:**  \n",
+    "  Training converges smoothly, predictions are accurate and generalize well to unseen inputs.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 6. **Shallow vs Deep**\n",
+    "- **Suggested action:**  \n",
+    "  Try comparing a shallow-wide network to a deep-narrow network with a similar total number of parameters.  \n",
+    "  - **Example A (Shallow):** Layers: `1`, Neurons: `200`  \n",
+    "  - **Example B (Deep):** Layers: `4`, Neurons: `30–40`  \n",
+    "  - Learning Rate: `0.001`  \n",
+    "  - Epochs: `100000–150000`\n",
+    "- **What to look for:**  \n",
+    "  See which model learns faster, generalizes better, or overfits more easily. Wide models may memorize faster; deep models may capture hierarchical patterns.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 7. **Compare multiple architectures**\n",
+    "- **Suggested action:**  \n",
+    "  - Run multiple models with different sizes and learning rates. You can clear the training history at any time by clicking on **\"Clear All History\"**.  \n",
+    "  - Use the **name field** before clicking **\"Train\"** to store each run.  \n",
+    "  - Plot all saved predictions and loss curves from history in the cell below.\n",
+    "- **What to look for:**  \n",
+    "  Compare convergence speed, overfitting/underfitting tendencies, and prediction smoothness across models.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3026fb9",
+   "metadata": {},
+   "source": [
+    "### Plotting entire training history"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "ea3d47ed",
@@ -735,14 +825,6 @@
     "plt.tight_layout()\n",
     "plt.show()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8c451f32",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
