--- a/Basics-GPRandNN-Tutorials/nn-notebook/nn-from-scratch-deeper.ipynb
+++ b/Basics-GPRandNN-Tutorials/nn-notebook/nn-from-scratch-deeper.ipynb
@@ -695,7 +695,6 @@
     "- **What to look for:**  \n",
     "  Loss decreases slowly or stalls, and the predictions remain overly simple — the model fails to capture complexity.\n",
     "\n",
-    "---\n",
     "\n",
     "### 2. **Overfitting**\n",
     "- **Suggested setup range:**  \n",
@@ -706,7 +705,6 @@
     "- **What to look for:**  \n",
     "  Predictions may fit training points too closely but behave erratically between them or outside the range.\n",
     "\n",
-    "---\n",
     "\n",
     "### 3. **Too low learning rate**\n",
     "- **Suggested setup range:**  \n",
@@ -717,7 +715,6 @@
     "- **What to look for:**  \n",
     "  Loss drops very slowly or flattens out early, indicating ineffective learning progress.\n",
     "\n",
-    "---\n",
     "\n",
     "### 4. **Too high learning rate**\n",
     "- **Suggested setup range:**  \n",
@@ -728,30 +725,29 @@
     "- **What to look for:**  \n",
     "  Training loss is unstable or even increases. Predictions jump around due to overly large updates.\n",
     "\n",
-    "---\n",
+    "  ⚠️ Note: In this simplified neural network (trained with manual code and no adaptive optimizers), a higher learning rate may sometimes appear to \"work better\". With a very low learning rate, convergence can be extremely slow, and the network may appear \"stuck\" unless trained for hundreds of thousands or even millions of epochs. This is due to the absence of momentum, weight decay, or adaptive methods like Adam — so higher learning rates may be needed to escape flat regions or poor local minima. However, this comes at the cost of instability or chaotic behavior if the learning rate is too large.\n",
     "\n",
-    "### 5. **Just right**\n",
+    "\n",
+    "### 5. **Just right (for us)**\n",
     "- **Suggested setup range:**  \n",
     "  - Layers: `2–3`  \n",
     "  - Neurons: `50–150`  \n",
-    "  - Learning Rate: `0.001`  \n",
+    "  - Learning Rate: `0.01`  \n",
     "  - Epochs: `100000–150000`\n",
     "- **What to look for:**  \n",
-    "  Training converges smoothly, predictions are accurate and generalize well to unseen inputs.\n",
+    "  Predictions are finally more accurate.\n",
     "\n",
-    "---\n",
     "\n",
     "### 6. **Shallow vs Deep**\n",
     "- **Suggested action:**  \n",
     "  Try comparing a shallow-wide network to a deep-narrow network with a similar total number of parameters.  \n",
     "  - **Example A (Shallow):** Layers: `1`, Neurons: `200`  \n",
     "  - **Example B (Deep):** Layers: `4`, Neurons: `30–40`  \n",
-    "  - Learning Rate: `0.001`  \n",
+    "  - Learning Rate: `0.01`  \n",
     "  - Epochs: `100000–150000`\n",
     "- **What to look for:**  \n",
     "  See which model learns faster, generalizes better, or overfits more easily. Wide models may memorize faster; deep models may capture hierarchical patterns.\n",
     "\n",
-    "---\n",
     "\n",
     "### 7. **Compare multiple architectures**\n",
     "- **Suggested action:**  \n",
