--- a/Basics-GPRandNN-Tutorials/nn-notebook/nn-from-scratch-deeper.ipynb
+++ b/Basics-GPRandNN-Tutorials/nn-notebook/nn-from-scratch-deeper.ipynb
@@ -251,7 +251,7 @@
     "\n",
     "The output prediction is:\n",
     "$$\n",
-    "\\hat{y} = W_{\\text{out}} \\cdot a + b_{\\text{out}}\n",
+    "\\hat{y} = W_{\\text{out}} \\cdot a + b_{\\text{out}}.\n",
     "$$"
    ]
   },
@@ -295,7 +295,7 @@
     "\\frac{\\partial \\mathcal{L}}{\\partial W} = \\frac{\\partial \\mathcal{L}}{\\partial \\hat{y}} \\cdot \\frac{\\partial \\hat{y}}{\\partial a} \\cdot \\frac{\\partial a}{\\partial z} \\cdot \\frac{\\partial z}{\\partial W}\n",
     "$$\n",
     "\n",
-    "This gives a recipe for computing **gradients layer by layer**, starting from the output and going backward. This is why it’s called **back-propagation**.\n",
+    "This gives a recipe for computing **gradients layer by layer**, starting from the output and going backward. This is why it’s called **back-propagation**. The same goes for the biases.\n",
     "\n",
     "- For each layer, update:\n",
     "  - Weights:\n",
@@ -535,7 +535,11 @@
    "id": "d9fb4a70",
    "metadata": {},
    "source": [
-    "## Neural Network Behavior"
+    "## Neural Network Behavior\n",
+    "\n",
+    "Use the sliders and \"Train\" button to explore how different hyperparameters and architechtures affect neural network training. Name each run for future comparison.\n",
+    "\n",
+    "Below are some suggested exercises exploring different features and limitations of this simple NN we constructed.\n"
    ]
   },
   {
@@ -725,7 +729,7 @@
     "- **What to look for:**  \n",
     "  Training loss is unstable or even increases. Predictions jump around due to overly large updates.\n",
     "\n",
-    "  ⚠️ Note: In this simplified neural network (trained with manual code and no adaptive optimizers), a higher learning rate may sometimes appear to \"work better\". With a very low learning rate, convergence can be extremely slow, and the network may appear \"stuck\" unless trained for hundreds of thousands or even millions of epochs. This is due to the absence of momentum, weight decay, or adaptive methods like Adam — so higher learning rates may be needed to escape flat regions or poor local minima. However, this comes at the cost of instability or chaotic behavior if the learning rate is too large.\n",
+    "  ⚠️ Note: In this simplified neural network (trained with manual code and no adaptive optimizers), a higher learning rate may sometimes appear to \"work better\". With a very low learning rate, convergence can be extremely slow, and the network may appear \"stuck\" unless trained for hundreds of thousands or even millions of epochs. This is due to the absence of momentum, weight decay (regularization), or adaptive methods like Adam — so higher learning rates may be needed to escape flat regions or poor local minima. However, this comes at the cost of instability or chaotic behavior if the learning rate is too large.\n",
     "\n",
     "\n",
     "### 5. **Just right (for us)**\n",
