update slide settings

--- a/SALTED-tutorial/salted-notebook.ipynb
+++ b/SALTED-tutorial/salted-notebook.ipynb
@@ -4,7 +4,6 @@
    "cell_type": "markdown",
    "id": "f7bea998-e26e-42a4-9d6b-9640d0c6c910",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     },
@@ -26,7 +25,6 @@
    "cell_type": "markdown",
    "id": "cccf2f2a-6eba-40ad-b0bb-85182ec39023",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     },
@@ -70,7 +68,6 @@
    "execution_count": 2,
    "id": "0fc91b2c-792f-4a1a-9389-8648b289e5ac",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     },
@@ -91,7 +88,6 @@
    "execution_count": 3,
    "id": "02f243b7",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     },
@@ -120,7 +116,9 @@
    "execution_count": 4,
    "id": "63bf500b-3de3-4c8d-88ed-c54c362169ad",
    "metadata": {
-    "editable": true,
+    "jupyter": {
+     "source_hidden": true
+    },
     "slideshow": {
      "slide_type": "subslide"
     },
@@ -169,7 +167,6 @@
    "cell_type": "markdown",
    "id": "67ce519e-71fb-4776-8997-166fd929bcd8",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     },
@@ -186,7 +183,6 @@
    "execution_count": null,
    "id": "939a5897-4c7d-4408-9a67-e5682fcabb15",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     },
@@ -245,7 +241,6 @@
    "cell_type": "markdown",
    "id": "9a2ca7a1-824a-4922-88c2-96d658cb8c24",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     },
@@ -259,7 +254,6 @@
    "cell_type": "markdown",
    "id": "2e40f5f3-6969-493f-b8c7-835ebabd7b00",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     },
@@ -273,7 +267,6 @@
    "cell_type": "markdown",
    "id": "cf7d732c-caf0-4c72-8757-8c8aeda22e6b",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     },
@@ -291,7 +284,6 @@
    "cell_type": "markdown",
    "id": "099d525c-df2a-4b66-a32a-3caad08121e2",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     },
@@ -315,7 +307,6 @@
    "cell_type": "markdown",
    "id": "39663a20-6aba-4ea6-b864-604cfd6070b6",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     },
@@ -341,7 +332,6 @@
    "execution_count": 5,
    "id": "f1a4771c",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     },
@@ -379,7 +369,6 @@
    "execution_count": 6,
    "id": "4f092b5f-fd4b-45bf-8d92-165f4419b318",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     },
@@ -404,7 +393,6 @@
    "cell_type": "markdown",
    "id": "62cd0929",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     },
@@ -419,7 +407,9 @@
    "execution_count": 15,
    "id": "496498e6-d987-4211-b92d-979e2bff5df8",
    "metadata": {
-    "editable": true,
+    "jupyter": {
+     "source_hidden": true
+    },
     "slideshow": {
      "slide_type": "fragment"
     },
@@ -521,6 +511,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ce1f789a-8b5d-4485-8e98-3c9add473439",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "tags": []
+   },
+   "source": [
+    "The invariant kernel function is\n",
+    "$$\n",
+    "k(M_i, M_j) = \\sum_{aa'} \\int_{\\hat{R} \\in \\mathrm{SO_3}} \\mathrm{d} \\hat{R}\n",
+    "\\left| \\int \\mathrm{d} \\vec{r} \\rho^{i,a}(\\vec{r}) \\rho^{j,a'}(\\hat{R}\\vec{r}) \\right|^2\n",
+    "$$\n",
+    "which has been widely used in machine learning for learning molecular and materials properties."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "af0724f8-b017-4669-bef1-b4bc445a0700",
    "metadata": {
     "editable": true,
@@ -577,7 +586,6 @@
    "cell_type": "markdown",
    "id": "aeef6ea4-e5fc-4c0f-bc64-4e3f8ac10c3f",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     },
@@ -592,7 +600,6 @@
    "execution_count": 11,
    "id": "19ae9ae0-a7f8-40a0-af9a-7d71a346f1e6",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     },
@@ -617,7 +624,6 @@
    "cell_type": "markdown",
    "id": "0d69042c",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     },
@@ -636,7 +642,6 @@
    "cell_type": "markdown",
    "id": "853ab84e-61a9-407d-8bb8-9fa476183636",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     },
@@ -651,7 +656,6 @@
    "cell_type": "markdown",
    "id": "9d36ad5b-abe7-4c04-81cd-9a99aa957a00",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     },
@@ -669,7 +673,6 @@
    "execution_count": 6,
    "id": "d0d44338-5207-495e-a9bc-9280eb3b0fad",
    "metadata": {
-    "editable": true,
     "scrolled": true,
     "slideshow": {
      "slide_type": "slide"
@@ -775,7 +778,6 @@
    "execution_count": 108,
    "id": "ff39e6c8-4ed7-49c6-9987-b86095bbf7ed",
    "metadata": {
-    "editable": true,
     "jupyter": {
      "source_hidden": true
     },
@@ -852,7 +854,6 @@
    "cell_type": "markdown",
    "id": "8a568ca0",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     },
@@ -892,7 +893,6 @@
    "id": "e9f53f23-23da-4fc2-81e9-b27babecdbfb",
    "metadata": {
     "collapsed": true,
-    "editable": true,
     "jupyter": {
      "outputs_hidden": true
     },
@@ -1021,7 +1021,9 @@
    "execution_count": 140,
    "id": "91c3abd6",
    "metadata": {
-    "editable": true,
+    "jupyter": {
+     "source_hidden": true
+    },
     "slideshow": {
      "slide_type": "slide"
     },
@@ -1068,7 +1070,6 @@
    "cell_type": "markdown",
    "id": "34edf9d9",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     },
@@ -1104,7 +1105,6 @@
    "execution_count": null,
    "id": "f70c0123-6cd8-4738-9994-6804b7540a8a",
    "metadata": {
-    "editable": true,
     "scrolled": true,
     "slideshow": {
      "slide_type": "fragment"
@@ -1330,7 +1330,6 @@
    "cell_type": "markdown",
    "id": "e266af42-ae8a-4ede-bf7e-efd6113a0340",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     },
@@ -1345,7 +1344,6 @@
    "execution_count": 141,
    "id": "f141afea",
    "metadata": {
-    "editable": true,
     "jupyter": {
      "source_hidden": true
     },
@@ -1421,7 +1419,6 @@
    "cell_type": "markdown",
    "id": "b47fe126-cd0f-4e19-bc17-5f6c1db41d6d",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     },
@@ -1442,7 +1439,6 @@
    "cell_type": "markdown",
    "id": "6acb66f5-ae73-4606-974e-26368380df98",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     },
@@ -1469,7 +1465,6 @@
    "cell_type": "markdown",
    "id": "f28ade9b-689e-4830-92a1-0e6ffd3a3988",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     },
@@ -1491,7 +1486,6 @@
    "execution_count": null,
    "id": "f2b46571-7e70-4770-a196-9a7f1fd3ef23",
    "metadata": {
-    "editable": true,
     "scrolled": true,
     "slideshow": {
      "slide_type": "slide"
@@ -1662,7 +1656,6 @@
    "cell_type": "markdown",
    "id": "88ec1631",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     },
@@ -1677,7 +1670,6 @@
    "execution_count": 176,
    "id": "00b11da3-2510-425a-b827-529c7d71e42d",
    "metadata": {
-    "editable": true,
     "scrolled": true,
     "slideshow": {
      "slide_type": "fragment"
@@ -1762,7 +1754,9 @@
    "execution_count": 8,
    "id": "5131f740-dbd3-4fbb-baf3-bb1254ecb94c",
    "metadata": {
-    "editable": true,
+    "jupyter": {
+     "source_hidden": true
+    },
     "slideshow": {
      "slide_type": "slide"
     },
@@ -1813,7 +1807,6 @@
    "cell_type": "markdown",
    "id": "44b1cc8b",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     },
@@ -1828,7 +1821,6 @@
    "execution_count": 9,
    "id": "552d52e1-b227-4384-b4a5-c3588556a0b2",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     },
@@ -1864,7 +1856,9 @@
    "execution_count": null,
    "id": "4841583a",
    "metadata": {
-    "editable": true,
+    "jupyter": {
+     "source_hidden": true
+    },
     "slideshow": {
      "slide_type": "slide"
     },
@@ -1927,7 +1921,6 @@
    "cell_type": "markdown",
    "id": "4190eedd",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     },
@@ -1962,7 +1955,6 @@
    "execution_count": null,
    "id": "74dca390-d929-49eb-a18d-81c68331d84b",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     },
@@ -2018,7 +2010,6 @@
    "cell_type": "markdown",
    "id": "2da9e168",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     },
@@ -2033,7 +2024,10 @@
    "execution_count": 6,
    "id": "7d133ce8-e0a1-412e-a9cd-06948a5459aa",
    "metadata": {
-    "editable": true,
+    "jupyter": {
+     "source_hidden": true
+    },
+    "scrolled": true,
     "slideshow": {
      "slide_type": "fragment"
     },
@@ -2077,7 +2071,6 @@
    "cell_type": "markdown",
    "id": "a5d172ad-e6eb-438f-813a-f015e8f966ec",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     },
@@ -2094,7 +2087,6 @@
    "execution_count": null,
    "id": "10f2b1ad-5cfa-4934-9602-98b5bf347dfa",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     },
@@ -2154,7 +2146,6 @@
    "execution_count": 14,
    "id": "2746d729-1cb3-402d-b936-4e6fa46dce1f",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     },
@@ -2204,7 +2195,6 @@
    "cell_type": "markdown",
    "id": "f4db3340",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     },
@@ -2224,7 +2214,6 @@
    "execution_count": 23,
    "id": "c1b217d7-284d-4995-a087-12af4cefaea6",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     },
@@ -2258,7 +2247,6 @@
    "cell_type": "markdown",
    "id": "575a2d22",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     },
@@ -2278,7 +2266,6 @@
    "execution_count": 37,
    "id": "662b08cf-d727-4167-bacb-ee5411efb41f",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     },
@@ -2312,7 +2299,6 @@
    "cell_type": "markdown",
    "id": "02de26d6",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     },
@@ -2328,7 +2314,6 @@
    "execution_count": null,
    "id": "1c5600c6-adda-4657-9952-364514ee7987",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     },
@@ -2355,7 +2340,9 @@
    "execution_count": 40,
    "id": "336118d3-2012-44f8-9ed5-029640179fac",
    "metadata": {
-    "editable": true,
+    "jupyter": {
+     "source_hidden": true
+    },
     "slideshow": {
      "slide_type": "fragment"
     },
@@ -2399,7 +2386,6 @@
    "cell_type": "markdown",
    "id": "9e22a929",
    "metadata": {
-    "editable": true,
     "slideshow": {
      "slide_type": "slide"
     },
@@ -2415,7 +2401,6 @@
    "execution_count": null,
    "id": "0c4c96ea-decc-40d2-b9a7-e943f3d0a50e",
    "metadata": {
-    "editable": true,
     "scrolled": true,
     "slideshow": {
      "slide_type": "fragment"
@@ -2443,7 +2428,6 @@
    "execution_count": 42,
    "id": "fe3d515d-ccae-4642-af61-5060433e5396",
    "metadata": {
-    "editable": true,
     "jupyter": {
      "source_hidden": true
     },
@@ -2518,9 +2502,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "salted_tut",
+   "display_name": "Python [conda env:salted_tut] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-salted_tut-py"
   },
   "language_info": {
    "codemirror_mode": {
